clusters/pre-prod/pre-prod-us-east-1/tenants/messaging/common-redis-config/haproxy_nlb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-extra-sentinel-mps-sharq
  namespace: messaging
  labels:
    app: redis-extra-sentinel-mps-sharq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-extra-sentinel-mps-sharq
  template:
    metadata:
      labels:
        app: redis-extra-sentinel-mps-sharq
    spec:
      tolerations:
        - key: ops.plivo.com/dedicated-for
          value: messaging-redis-sentinel-spot
      containers:
        - name: sentinel
          image: 857556598075.dkr.ecr.us-west-1.amazonaws.com/plivo/bitnami-redis/redis-sentinel-7.4.0:25.02.26.1480
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: sentinel
              containerPort: 26379
          readinessProbe:
            exec:
              command:
                - bash
                - '-lc'
                - /opt/bitnami/redis-sentinel/bin/redis-cli -p 26379 ping | grep PONG
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-extra-sentinel-mps-sharq-isolation
  namespace: messaging
spec:
  podSelector:
    matchLabels:
      app: redis-extra-sentinel-mps-sharq
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: redis-mps-sharq
              app.kubernetes.io/name: redis
      ports:
        - protocol: TCP
          port: 26379
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: redis-mps-sharq
              app.kubernetes.io/name: redis
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 26379
